--- a/app.json
+++ b/app.json
@@ -21,15 +21,13 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "newArchEnabled": true,
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-secure-store"
-    ],
+    "plugins": ["expo-router", "expo-secure-store", "expo-font"],
     "experiments": {
       "typedRoutes": true
     }
