--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
     "react-native-web": "~0.19.13",
