--- a/package.json
+++ b/package.json
@@ -19,26 +19,28 @@
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/flash-list": "1.7.1",
-    "expo": "^52.0.7",
+    "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-image": "~2.0.0",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.6",
+    "expo-image": "~2.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.11",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
+    "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2"
   },
@@ -59,7 +61,8 @@
       "reactNativeDirectoryCheck": {
         "exclude": [
           "react-redux",
-          "@reduxjs/toolkit"
+          "@reduxjs/toolkit",
+          "react-native-animated-pagination-dots"
         ]
       }
     }
