--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "@gorhom/bottom-sheet": "^5",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
