--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/flash-list": "1.7.1",
-    "expo": "^52.0.11",
+    "expo": "^52.0.17",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-image": "~2.0.2",
+    "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
+    "expo-router": "~4.0.11",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.13",
+    "expo-splash-screen": "~0.29.16",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
+    "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -44,7 +44,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "lottie-react-native": "7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
